# plonk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/plonk/: CMakeLists.txt  camera.cpp  context.cpp  context.h  frame.cpp  mesh.cpp  plonk.cpp  renderer.cpp  resource_id.cpp  scene.cpp  window.cpp
libs/plonk/include/plonk/: camera.h  context.h  event.h  frame.h  keys.h  math.h  mesh.h  plonk.h  renderer.h  resource_id.h  scene.h  window.h
libs/plonk/include/plonk/math/: matrices.h  vectors.h
libs/plonk/tests/: CMakeLists.txt  helpers.h  main.cpp  math.cpp  resource_id.cpp
libs/plonk/tests/math/: matrices.cpp  vectors.cpp
shaders/: simple.frag.glsl  simple.vert.glsl
